# rust-code-search-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: lib.rs
crates/embedding/: Cargo.toml
crates/embedding/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/models/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
docs/: architecture.md
scripts/: generate_corpus.sh  init_index.sh
specs/: feature-indexing.yaml  feature-search.yaml
specs/schema/: tantivy.yaml
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs  workload.rs
tests/e2e/tests/: api_contract.rs  embedding_drift.rs  index_throughput.rs  slow_search.rs
tests/fixtures/: README.md
tests/fixtures/sample_project/: lib.rs
