[workspace]
members = [
    "apps/api",
    "apps/cli",
    "apps/worker",
    "crates/common",
    "crates/models",
    "crates/crawler",
    "crates/indexer",
    "crates/query",
    "crates/search",
    "crates/embedding",
    "crates/storage",
    "crates/contracts",
    "crates/testing",
    "tests/e2e",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
